--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "typeRoots": [
-      "node_modules/@types",
-      "types"
+      "./node_modules/@types",
+      "./types"
     ],
     "target": "es5",
     "lib": [
